<?xml version="1.0"?>
<package format="2">
  <name>realsense2_simulator</name>
  <version>0.0.0</version>
  <description>
    Metapackage allowing easy installation of RealSense simulation components.
  </description>

  <license>BSD</license>
  <author>author</author>
  <maintainer email="author@domain.com">author</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>realsense_gazebo_plugin</exec_depend>

  <export>
    <metapackage/>
  </export>

</package>
